# ucschools

./: .ai-config.json  .cursorrules  .gitignore  ADAPTIVE_LEARNING_PHASE_0_1_IMPLEMENTATION.md  ADAPTIVE_LEARNING_SYSTEM_ARCHITECTURE.md  AI-TUTOR-PRODUCTION-SUMMARY.md  AI_TOOLS_GRAPHIFY_GUIDE.md  AI_TUTOR_VS_OPENMAIC_BENCHMARK_ANALYSIS.md  ARCHITECTURE_CORE_SUMMARY.md  CLAUDE.md  CONSENT_WORKFLOW_FINAL.md  CONSENT_WORKFLOW_SIMPLIFIED.md  DEPLOYMENT_OPERATIONS_CONSOLIDATED.md  ENTERPRISE_IMPLEMENTATION_SUMMARY.md  ENTERPRISE_MATURITY_AUDIT.md  EXECUTIVE_BRIEFING_ADAPTIVE_LEARNING.md  GRAPHIFY_README.md  IMPLEMENTATION_EVIDENCE.md  IMPLEMENTATION_KICKOFF_GUIDE.md  IMPLEMENTATION_OPEN_ITEMS_SUMMARY.md  MEMORY_AND_AGENT_PLANS_SUMMARY.md  NDEAR_IMPLEMENTATION_PLAN.md  NDEAR_IMPLEMENTATION_SUMMARY.md  NDEAR_UI_ACCESS_GUIDE.md  PLAYSTORE_RELEASE_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_STRATEGY.md  QUICK_START.md  REVISED_NDEAR_IMPLEMENTATION.md  SCHOOLS24-SDLC.md  TEACHING_ENGINEERING_CODE_ANALYSIS.md  docker-compose.ai-tutor.yml  graphify-uc-school.cmd  graphify.cmd  test_redis.rs  test_smtp.rs  verify-graphify.cmd  verify-production-readiness.sh  z-startup-commands.md
.agent/workflows/: implementation.md
.antigravity/: settings.json
.claude/: settings.json
.claude/memory/: 01-graphify-system.md  02-graphify-setup-complete.md
.codex/: instructions.md  production-readiness-plan.md  settings.json  setup.sh
.copilot/: settings.json
.copilot-memory/: INDEX.md  README.md
.copilot-memory/01-architecture/: overview.md  tech-stack.md
.gemini/: settings.json
.github/: copilot-instructions.md
.graphify-context/: markdown-index.txt  project-context.txt  project-tree.txt
.zen/: settings.json
AI-Tutor-Backend/: .dockerignore  .env.example  .tmp_api_tests.txt  Cargo.toml  DEPLOYMENT.md  Dockerfile  ENVIRONMENT_VARIABLES.md  PEDAGOGY_ROUTING.md  PRODUCTION_DELIVERY_SUMMARY.md  PRODUCTION_LAUNCH_CHECKLIST.md  PRODUCTION_QUICKSTART_RUNBOOK.md  PRODUCTION_READINESS_FINAL_SIGN_OFF.md  PRODUCTION_RELEASE.md  PRODUCTION_SIGN_OFF.md  QUICK_REFERENCE.md  README.md  render.yaml
AI-Tutor-Backend/crates/api/: Cargo.toml
AI-Tutor-Backend/crates/api/src/: alerting.rs  app.rs  auth.rs  billing_catalog.rs  cleanup.rs  env_helpers.rs  lib.rs  lib.rs.backup  llm_proxy.rs  main.rs  notifications.rs  queue.rs  startup_readiness.rs  subscription_scheduler.rs  telemetry.rs  tools.rs
AI-Tutor-Backend/crates/api/src/tests/: e2e_verification.rs  oauth_e2e_stability.rs
AI-Tutor-Backend/crates/api/templates/: grace_period_warning.html  operator_otp.html  payment_failed.html  payment_success.html  service_restricted.html
AI-Tutor-Backend/crates/common/: Cargo.toml
AI-Tutor-Backend/crates/common/src/: error.rs
AI-Tutor-Backend/crates/domain/: Cargo.toml
AI-Tutor-Backend/crates/domain/src/: action.rs  auth.rs  billing.rs  billing_entities.rs  credits.rs  generation.rs  job.rs  lesson.rs  lesson_adaptive.rs  lesson_shelf.rs  lib.rs  provider.rs  routing.rs  runtime.rs  scene.rs  school.rs
AI-Tutor-Backend/crates/gateway/: Cargo.toml
AI-Tutor-Backend/crates/gateway/src/: main.rs
AI-Tutor-Backend/crates/media/: Cargo.toml
AI-Tutor-Backend/crates/media/src/: lib.rs  pdf_processor.rs  storage.rs  tasks.rs
AI-Tutor-Backend/crates/orchestrator/: Cargo.toml
AI-Tutor-Backend/crates/orchestrator/src/: agent_prompt.rs  chat_graph.rs  context.rs  cost_guard.rs  director_prompt.rs  engine.rs  generation.rs  graph.rs  lib.rs  pedagogy_router.rs  pipeline.rs  placement.rs  planner.rs  prompts.rs  response_parser.rs  router.rs  state.rs  telemetry.rs  validator.rs  whiteboard_doubt.rs  workflow.rs
AI-Tutor-Backend/crates/providers/: Cargo.toml
AI-Tutor-Backend/crates/providers/src/: anthropic.rs  config.rs  factory.rs  google.rs  lib.rs  openai.rs  openrouter.rs  registry.rs  resilient.rs  resolve.rs  traits.rs  whisper.rs
AI-Tutor-Backend/crates/routing/: Cargo.toml
AI-Tutor-Backend/crates/routing/src/: capabilities.rs  lib.rs  model_router.rs  routing_rules.rs
AI-Tutor-Backend/crates/runtime/: Cargo.toml
AI-Tutor-Backend/crates/runtime/src/: lib.rs  session.rs  whiteboard.rs
AI-Tutor-Backend/crates/storage/: Cargo.toml
AI-Tutor-Backend/crates/storage/src/: filesystem.rs  lib.rs  repositories.rs
AI-Tutor-Backend/data/: runtime.db
AI-Tutor-Backend/data-drill/backup-20260415-021756/: backup-drill-seed.txt
AI-Tutor-Backend/data-drill/restore-20260415-021756/: queue.db
AI-Tutor-Backend/docs/: DATABASE_SCHEMA.md  OPERATOR_GATEWAY_ROLLOUT.md  implementation-plan.md  model-selection-plan.md  production-ops-runbook.md  system-design.md
AI-Tutor-Backend/docs/runbooks/: backup-restore-failure.md  deploy-queue-worker.md  nginx-pingora-gateway.conf
AI-Tutor-Frontend/: .dockerignore  .env.example  Dockerfile  README.md  components.json  fix.js  package.json  pnpm-lock.yaml  replace_slate.py  replace_slate_all.py  tsconfig.tsbuildinfo  vercel.json
Schools24-backend/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  INVENTORY_IMPLEMENTATION.md  NDEAR_INTEROP_ARCHITECTURE.md  ORACLE_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  SEEDER_GUIDE.md  SOFT_DELETE_ARCHITECTURE.md  docker-compose.yml  go.mod  go.sum  mongo_r2_audit_report.json  render.yaml  tmp_teacher_scope_check.go
Schools24-frontend/: LEGAL_COMPLIANCE_IMPLEMENTATION.md  capacitor.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
memory/: README.md  ai-tutor-backend-first-roadmap.md  ai-tutor-translation-plan.md  backend-current-state.md  frontend-current-state.md  openmaic-backend-layer-analysis.md  openmaic-gap-closure-master-task-list.md  openmaic-gap-closure-task-plan.md  openmaic-streaming-runtime-implementation-plan.md  openmaic-to-ai-tutor-execution-roadmap.md  openmaic-to-ai-tutor-production-checklist.md  openmaic-to-ai-tutor-readiness-matrix.md  repo-worktree-notes.md  schools24-system-map.md
schools24-landing/: .gitignore  App.tsx  index.css  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
(+945 files in other folders)
