[workspace]
members = [
  "crates/api",
  "crates/common",
  "crates/domain",
  "crates/orchestrator",
  "crates/providers",
  "crates/runtime",
  "crates/storage",
  "crates/media",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Proprietary"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "=0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusty-s3 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = "=8.3.0"
