[package]
name = "ai_tutor_api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower = "0.5"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
ai_tutor_domain = { path = "../domain" }
ai_tutor_orchestrator = { path = "../orchestrator" }
ai_tutor_providers = { path = "../providers" }
ai_tutor_runtime = { path = "../runtime" }
ai_tutor_storage = { path = "../storage" }

[dev-dependencies]
filetime = "0.2"
