[package]
name = "ai_tutor_api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest.workspace = true
jsonwebtoken.workspace = true
sha2 = "0.10"
base64 = "0.22"
native-tls = "0.2"
tokio-native-tls = "0.3"
redis = { version = "0.27", features = ["tokio-comp"] }
rand = "0.8"
ai_tutor_domain = { path = "../domain" }
ai_tutor_media = { path = "../media" }
ai_tutor_orchestrator = { path = "../orchestrator" }
ai_tutor_providers = { path = "../providers" }
ai_tutor_runtime = { path = "../runtime" }
ai_tutor_storage = { path = "../storage" }

[dev-dependencies]
filetime = "0.2"
