[package]
name = "ai_tutor_media"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
chrono.workspace = true
reqwest.workspace = true
rusty-s3.workspace = true
serde.workspace = true
tokio.workspace = true
uuid.workspace = true
ai_tutor_domain = { path = "../domain" }
