[package]
name = "ai_tutor_orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
ai_tutor_domain = { path = "../domain" }
ai_tutor_media = { path = "../media" }
ai_tutor_providers = { path = "../providers" }
ai_tutor_storage = { path = "../storage" }
