[package]
name = "ai_tutor_providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
anyhow.workspace = true
base64 = "0.22"
serde_json.workspace = true
minreq = { version = "2.13.4", features = ["https", "json-using-serde"] }
ai_tutor_domain = { path = "../domain" }
