[package]
name = "ai_tutor_providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
anyhow.workspace = true
base64 = "0.22"
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
eventsource-stream = "0.2"
futures-util = "0.3"
tracing.workspace = true
ai_tutor_domain = { path = "../domain" }
