[package]
name = "ai_tutor_storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
ai_tutor_domain = { path = "../domain" }
anyhow.workspace = true
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
postgres = "0.19"
native-tls = "0.2"
postgres-native-tls = "0.5"
