[package]
name = "ai_tutor_storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
ai_tutor_domain = { path = "../domain" }
anyhow.workspace = true
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
