[package]
name = "ai_tutor_storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
ai_tutor_domain = { path = "../domain" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
native-tls = { version = "0.2", features = ["vendored"] }
postgres-native-tls = "0.5"
uuid = { workspace = true, features = ["v4"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
